Restructure project architecture for lattice QCD ML experiments
- Reorganized directory structure with modular design
- Added base model class and factory pattern for model creation
- Implemented automated experiment management with timestamped folders
- Created hierarchical configuration system (base + model overrides)
- Added specialized modules for lattice QCD: .gpl file loading, spectral fitting
- Moved notebooks to analysis/ directory with focused purposes
- Updated README with new architecture and usage instructions
- Added experiment runner that creates organized result folders automatically
- Updated .gitignore to exclude large .gpl files

--- a/analysis/data_exploration.ipynb
+++ b/analysis/data_exploration.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CNN Model Experiments\n",
-    "\n",
-    "This notebook contains experiments and analysis for the Convolutional Neural Network model."
+    "# Data Exploration\n",
+    "Quick plots of correlators"
    ]
   },
   {
@@ -14,13 +13,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# TODO: Add CNN experiments\n",
-    "# - Model training with image data\n",
-    "# - Architecture experiments\n",
-    "# - Data augmentation analysis\n",
-    "# - Feature map visualization"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -30,8 +23,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
