--- a/analysis/results_comparison.ipynb
+++ b/analysis/results_comparison.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gradient Boosting Regressor Experiments\n",
-    "\n",
-    "This notebook contains experiments and analysis for the Gradient Boosting Regressor model."
+    "# Results Comparison\n",
+    "Compare models and plot results"
    ]
   },
   {
@@ -14,13 +13,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# TODO: Add GBR experiments\n",
-    "# - Model training\n",
-    "# - Hyperparameter optimization\n",
-    "# - Feature importance analysis\n",
-    "# - Performance evaluation"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -30,8 +23,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.0"
+   "nbconvert_exporter": "python",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
