--- a/analysis/preprocessing.ipynb
+++ b/analysis/preprocessing.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MLP Model Experiments\n",
-    "\n",
-    "This notebook contains experiments and analysis for the Multi-Layer Perceptron model."
+    "# Data Preprocessing\n",
+    "Explore and preprocess data"
    ]
   },
   {
@@ -14,13 +13,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# TODO: Add MLP experiments\n",
-    "# - Model training\n",
-    "# - Hyperparameter tuning\n",
-    "# - Performance analysis\n",
-    "# - Visualization"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -30,8 +23,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
